fix gateway-service pom